--- a/index.html
+++ b/index.html
@@ -17,7 +17,18 @@
 			<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 
 			<link href='css/style.css' rel='stylesheet' type='text/css'>			
-			<link href='css/extra_for_tpyed_js.css' rel='stylesheet' type='text/css'>			
+			<link href='css/extra_for_tpyed_js.css' rel='stylesheet' type='text/css'>		
+
+			<script>
+			  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+			  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+			  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+			  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+			  ga('create', 'UA-56931584-1', 'auto');
+			  ga('send', 'pageview');
+
+			</script>				
 	</head>
 	<body>
 
@@ -31,7 +42,7 @@
 						<span id="logo">eliagbenu.com</span>
 					</div>
 
-					<div class="col-lg-12 text-center">
+					<div class="col-lg-12 text-center quick_fix">
 
 						<script>
 							$(function(){
@@ -59,9 +70,11 @@
 				<div class="row written_text">
 					<div class="col-sm-12 text-center">
 						<p>
-							I code &amp; <a href="http://www.blog.eliagbenu.com">blog</a><br/>
-							I'm also an optimist<br/>
-							I do my best to enjoy everyday &amp; to smile.
+							I <a href="projects.html" 
+							target="_blank" style="text-decoration:underline">code</a> &amp; <a href="http://blog.eliagbenu.com/" 
+							target="_blank" style="text-decoration:underline">blog</a><br/>
+							I do my best to enjoy everyday &amp; to smile.<br/>
+							Find out more <a href="http://about.me/eliagbenu/" target="_blank" style="text-decoration:underline">about me.<a/>
 						</p>
 					</div>
 				</div>
@@ -69,42 +82,57 @@
 				<div class="row text-center">
 					<div class="col-sm-2">
 						<a href="https://twitter.com/eli_agbenu" target="_blank">
-							<i class="fa fa-twitter fa-2x"></i>						
+							<i class="fa fa-twitter fa-3x"></i>						
 						</a>
 					</div>
 					<div class="col-sm-2">
 						<a href="https://www.facebook.com/anthony.eli.agbenu" target="_blank">
-							<i class="fa fa-facebook fa-2x"></i>						
+							<i class="fa fa-facebook fa-3x"></i>						
 						</a>					
 					</div>
 					<div class="col-sm-2">
 						<a href="https://www.linkedin.com/profile/view?id=100248276" target="_blank">
-							<i class="fa fa-linkedin fa-2x"></i>							
+							<i class="fa fa-linkedin fa-3x"></i>							
 						</a>
 					</div>										
 					<div class="col-sm-2">
 						<a href="https://github.com/lefootballroi" target="_blank">
-							<i class="fa fa-github fa-2x"></i>
+							<i class="fa fa-github fa-3x"></i>
 						</a>
 					</div>
 					<div class="col-sm-2">
-						<a href="#" target="_blank">
+						<a href="https://plus.google.com/u/1/116442942916011373209" target="_blank">
+							<i class="fa fa-google-plus fa-3x"></i>
 						</a>					
-						<i class="fa fa-google fa-2x"></i>
 					</div>					
 				</div>
 
 				<div class="row text-center">
 					<div class="col-sm-2">
 						<a href="https://stackexchange.com/users/4540765/eli-agbenu" target="_blank">
-							<i class="fa fa-stack-exchange fa-2x"></i>						
+							<i class="fa fa-stack-exchange fa-3x"></i>						
 						</a>					
 					</div>
 					<div class="col-sm-2">
 						<a href="https://www.lefootballroi.tumblr.com" target="_blank">
-							<i class="fa fa-tumblr fa-2x"></i>
+							<i class="fa fa-tumblr fa-3x"></i>
 						</a>					
-					</div>					
+					</div>
+					<div class="col-sm-2">
+						<a href="http://instagram.com/lefootballroi" target="_blank">
+							<i class="fa fa-instagram fa-3x"></i>
+						</a>					
+					</div>															
+					<div class="col-sm-2">
+						<a href="http://www.slideshare.net/anthonyeliagbenu" target="_blank">
+							<i class="fa fa-slideshare fa-3x"></i>
+						</a>					
+					</div>	
+					<div class="col-sm-2">
+						<a href="https://dribbble.com/lefootballroi" target="_blank">
+							<i class="fa fa-dribbble fa-3x"></i>
+						</a>					
+					</div>																						
 				</div>
 			 </div>
 
