changed from eli to agbenu

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>Eli Agbenu
+		<title>Agbenu
 		</title>
 			<script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
 
@@ -39,7 +39,7 @@
 				<div class="row main_content">
 
 					<div class="col-lg-12 text-center">
-						<span id="logo">eliagbenu.com</span>
+						<span id="logo">agbenu.com</span>
 					</div>
 
 					<div class="col-lg-12 text-center quick_fix">
@@ -49,12 +49,12 @@
 								$(".element").typed({
 									strings: [
 										"", 
-										" My name is", 
-										" Eli Agbenu", 
-										" but, that's too formal",
-										" so", 
-										" call me",
-										" Eli",
+										" Agbenu means", 
+										" family", 
+										" strength",
+										" and", 
+										" loyalty",
+										" Agbenu.",										
 										],
 										typeSpeed: 40,
 										backDelay: 500,
@@ -71,7 +71,7 @@
 					<div class="col-sm-12 text-center">
 						<p>
 							I <a href="projects.html" 
-							target="_blank" style="text-decoration:underline">code</a> &amp; <a href="http://blog.eliagbenu.com/" 
+							target="_blank" style="text-decoration:underline">code</a> &amp; <a href="http://blog.agbenu.com/" 
 							target="_blank" style="text-decoration:underline">blog</a><br/>
 							I do my best to enjoy everyday &amp; to smile.<br/>
 							Find out more <a href="http://about.me/eliagbenu/" target="_blank" style="text-decoration:underline">about me.<a/>
